# cbbv2

./: .gitignore  README.md  pyproject.toml
cbb/: __init__.py
cbb/etl/: __init__.py  _async.py  async_scrape.py  database.py  date.py  init_db.py  load.py  scrape.py  transform.py
cbb/etl/sql/: create_tables.sql  create_views.sql
cbb/pipeline/: _async.py  _helpers.py  database.py  date.py  extract.py  helpers.py  interfaces.py  load.py  transform.py
cbb/pipeline/sql/: create_document_store.sql  create_tables.sql
src/cbb/analysis/: __init__.py  cleaning.py  sub.py
src/cbb/pipeline/: __init__.py  database.py  transform.py
src/cbb/pipeline/sql/: create_tables.sql
src/scripts/: pipeline_orchestrator.py
